# amd_error_demo

./: .gitignore  CMakeLists.txt  README.md  glad.c  glad.h  main.cpp
